--- a/account-settings.html
+++ b/account-settings.html
@@ -259,7 +259,7 @@
                                         aria-disabled="false"
                                         role="group"
                                         aria-labelledby="personal-info-row-title"
-                                        class="rcem0st cngiwj8 dir dir-ltr"
+                                        class="explore-filter-menu__list-padding cngiwj8 dir dir-ltr"
                                       >
                                         <div class="flex">
                                           <div class="_7ytxmo">
@@ -283,7 +283,7 @@
                                               </svg>
                                             </div>
                                           </div>
-                                          <div class="_gfomxi">
+                                          <div class="explore-filter-menu__list-label">
                                             <button
                                               type="button"
                                               class="_u1thwpg"
@@ -291,7 +291,7 @@
                                               <span class="_rortwiu"
                                                 ><div
                                                   id="personal-info-row-title"
-                                                  class="_gw4xx4"
+                                                  class="explore-filter-menu__list-title"
                                                 >
                                                   Personal info
                                                 </div>
@@ -327,7 +327,7 @@
                                         aria-disabled="false"
                                         role="group"
                                         aria-labelledby="account-row-title"
-                                        class="rcem0st cngiwj8 dir dir-ltr"
+                                        class="explore-filter-menu__list-padding cngiwj8 dir dir-ltr"
                                       >
                                         <div class="flex">
                                           <div class="_7ytxmo">
@@ -357,7 +357,7 @@
                                               </svg>
                                             </div>
                                           </div>
-                                          <div class="_gfomxi">
+                                          <div class="explore-filter-menu__list-label">
                                             <button
                                               type="button"
                                               class="_u1thwpg"
@@ -365,7 +365,7 @@
                                               <span class="_rortwiu"
                                                 ><div
                                                   id="account-row-title"
-                                                  class="_gw4xx4"
+                                                  class="explore-filter-menu__list-title"
                                                 >
                                                   Account
                                                 </div>
@@ -413,7 +413,7 @@
                                         aria-disabled="false"
                                         role="group"
                                         aria-labelledby="host-manage-row-title"
-                                        class="rcem0st cngiwj8 dir dir-ltr"
+                                        class="explore-filter-menu__list-padding cngiwj8 dir dir-ltr"
                                       >
                                         <div class="flex">
                                           <div class="_7ytxmo">
@@ -437,7 +437,7 @@
                                               </svg>
                                             </div>
                                           </div>
-                                          <div class="_gfomxi">
+                                          <div class="explore-filter-menu__list-label">
                                             <button
                                               type="button"
                                               class="_u1thwpg"
@@ -445,7 +445,7 @@
                                               <span class="_rortwiu"
                                                 ><div
                                                   id="host-manage-row-title"
-                                                  class="_gw4xx4"
+                                                  class="explore-filter-menu__list-title"
                                                 >
                                                   Manage your listing
                                                 </div>
@@ -481,7 +481,7 @@
                                         aria-disabled="false"
                                         role="group"
                                         aria-labelledby="experience-manage-row-title"
-                                        class="rcem0st cngiwj8 dir dir-ltr"
+                                        class="explore-filter-menu__list-padding cngiwj8 dir dir-ltr"
                                       >
                                         <div class="flex">
                                           <div class="_7ytxmo">
@@ -505,7 +505,7 @@
                                               </svg>
                                             </div>
                                           </div>
-                                          <div class="_gfomxi">
+                                          <div class="explore-filter-menu__list-label">
                                             <button
                                               type="button"
                                               class="_u1thwpg"
@@ -513,7 +513,7 @@
                                               <span class="_rortwiu"
                                                 ><div
                                                   id="experience-manage-row-title"
-                                                  class="_gw4xx4"
+                                                  class="explore-filter-menu__list-title"
                                                 >
                                                   Manage your experience
                                                 </div>
@@ -563,7 +563,7 @@
                                         aria-disabled="false"
                                         role="group"
                                         aria-labelledby="host-referral-no-subtitle-row-title"
-                                        class="rcem0st cngiwj8 dir dir-ltr"
+                                        class="explore-filter-menu__list-padding cngiwj8 dir dir-ltr"
                                       >
                                         <div class="flex">
                                           <div class="_7ytxmo">
@@ -587,7 +587,7 @@
                                               </svg>
                                             </div>
                                           </div>
-                                          <div class="_gfomxi">
+                                          <div class="explore-filter-menu__list-label">
                                             <button
                                               type="button"
                                               class="_u1thwpg"
@@ -595,7 +595,7 @@
                                               <span class="_rortwiu"
                                                 ><div
                                                   id="host-referral-no-subtitle-row-title"
-                                                  class="_gw4xx4"
+                                                  class="explore-filter-menu__list-title"
                                                 >
                                                   Refer a Host
                                                 </div>
@@ -643,7 +643,7 @@
                                         aria-disabled="false"
                                         role="group"
                                         aria-labelledby="how-airbnb-works-row-title"
-                                        class="rcem0st cngiwj8 dir dir-ltr"
+                                        class="explore-filter-menu__list-padding cngiwj8 dir dir-ltr"
                                       >
                                         <div class="flex">
                                           <div class="_7ytxmo">
@@ -667,7 +667,7 @@
                                               </svg>
                                             </div>
                                           </div>
-                                          <div class="_gfomxi">
+                                          <div class="explore-filter-menu__list-label">
                                             <button
                                               type="button"
                                               class="_u1thwpg"
@@ -675,7 +675,7 @@
                                               <span class="_rortwiu"
                                                 ><div
                                                   id="how-airbnb-works-row-title"
-                                                  class="_gw4xx4"
+                                                  class="explore-filter-menu__list-title"
                                                 >
                                                   How Airbnb works
                                                 </div>
@@ -711,7 +711,7 @@
                                         aria-disabled="false"
                                         role="group"
                                         aria-labelledby="booking-and-traveling-row-title"
-                                        class="rcem0st cngiwj8 dir dir-ltr"
+                                        class="explore-filter-menu__list-padding cngiwj8 dir dir-ltr"
                                       >
                                         <div class="flex">
                                           <div class="_7ytxmo">
@@ -735,7 +735,7 @@
                                               </svg>
                                             </div>
                                           </div>
-                                          <div class="_gfomxi">
+                                          <div class="explore-filter-menu__list-label">
                                             <button
                                               type="button"
                                               class="_u1thwpg"
@@ -743,7 +743,7 @@
                                               <span class="_rortwiu"
                                                 ><div
                                                   id="booking-and-traveling-row-title"
-                                                  class="_gw4xx4"
+                                                  class="explore-filter-menu__list-title"
                                                 >
                                                   Get help
                                                 </div>
@@ -779,7 +779,7 @@
                                         aria-disabled="false"
                                         role="group"
                                         aria-labelledby="neighborhood-support-row-title"
-                                        class="rcem0st cngiwj8 dir dir-ltr"
+                                        class="explore-filter-menu__list-padding cngiwj8 dir dir-ltr"
                                       >
                                         <div class="flex">
                                           <div class="_7ytxmo">
@@ -803,7 +803,7 @@
                                               </svg>
                                             </div>
                                           </div>
-                                          <div class="_gfomxi">
+                                          <div class="explore-filter-menu__list-label">
                                             <button
                                               type="button"
                                               class="_u1thwpg"
@@ -811,7 +811,7 @@
                                               <span class="_rortwiu"
                                                 ><div
                                                   id="neighborhood-support-row-title"
-                                                  class="_gw4xx4"
+                                                  class="explore-filter-menu__list-title"
                                                 >
                                                   Contact Neighborhood Support
                                                 </div>
@@ -839,7 +839,7 @@
                                                     </g></svg></span
                                               ></span>
                                             </button>
-                                            <div class="_hi9sy">
+                                            <div class="explore-filter-menu__list-desc">
                                               Let our team know about concerns
                                               related to home sharing activity
                                               in your area.
