--- a/become-a-host/floor-plan.html
+++ b/become-a-host/floor-plan.html
@@ -178,13 +178,13 @@
                                 aria-disabled="false"
                                 role="group"
                                 aria-labelledby="stepper-item--0-row-title"
-                                class="rcem0st cngiwj8 dir dir-ltr"
+                                class="explore-filter-menu__list-padding cngiwj8 dir dir-ltr"
                               >
                                 <div class="flex">
-                                  <div class="_gfomxi">
+                                  <div class="explore-filter-menu__list-label">
                                     <div
                                       id="stepper-item--0-row-title"
-                                      class="_gw4xx4"
+                                      class="explore-filter-menu__list-title"
                                     >
                                       <div class="_8u4omh">Guests</div>
                                     </div>
@@ -275,13 +275,13 @@
                                 aria-disabled="false"
                                 role="group"
                                 aria-labelledby="stepper-item--1-row-title"
-                                class="rcem0st cngiwj8 dir dir-ltr"
+                                class="explore-filter-menu__list-padding cngiwj8 dir dir-ltr"
                               >
                                 <div class="flex">
-                                  <div class="_gfomxi">
+                                  <div class="explore-filter-menu__list-label">
                                     <div
                                       id="stepper-item--1-row-title"
-                                      class="_gw4xx4"
+                                      class="explore-filter-menu__list-title"
                                     >
                                       <div class="_8u4omh">Beds</div>
                                     </div>
@@ -372,13 +372,13 @@
                                 aria-disabled="false"
                                 role="group"
                                 aria-labelledby="stepper-item--2-row-title"
-                                class="rcem0st cngiwj8 dir dir-ltr"
+                                class="explore-filter-menu__list-padding cngiwj8 dir dir-ltr"
                               >
                                 <div class="flex">
-                                  <div class="_gfomxi">
+                                  <div class="explore-filter-menu__list-label">
                                     <div
                                       id="stepper-item--2-row-title"
-                                      class="_gw4xx4"
+                                      class="explore-filter-menu__list-title"
                                     >
                                       <div class="_8u4omh">Bedrooms</div>
                                     </div>
@@ -469,13 +469,13 @@
                                 aria-disabled="false"
                                 role="group"
                                 aria-labelledby="stepper-item--3-row-title"
-                                class="rcem0st cngiwj8 dir dir-ltr"
+                                class="explore-filter-menu__list-padding cngiwj8 dir dir-ltr"
                               >
                                 <div class="flex">
-                                  <div class="_gfomxi">
+                                  <div class="explore-filter-menu__list-label">
                                     <div
                                       id="stepper-item--3-row-title"
-                                      class="_gw4xx4"
+                                      class="explore-filter-menu__list-title"
                                     >
                                       <div class="_8u4omh">Bathrooms</div>
                                     </div>
