--- a/edit/what.html
+++ b/edit/what.html
@@ -672,16 +672,16 @@ Join me in this fun and easy cooking experience where you will learn techniques 
                                             <div
                                               id="ONLINE_QUESTION-0-radio-row"
                                               aria-disabled="false"
-                                              class="rcem0st uyl8mnh dir dir-ltr"
+                                              class="explore-filter-menu__list-padding uyl8mnh dir dir-ltr"
                                             >
                                               <label
                                                 for="ONLINE_QUESTION-0-radio-row-row-radio-button"
                                                 class="cursor-pointer"
                                                 ><div class="flex">
-                                                  <div class="_gfomxi">
+                                                  <div class="explore-filter-menu__list-label">
                                                     <div
                                                       id="ONLINE_QUESTION-0-radio-row-row-title"
-                                                      class="_gw4xx4"
+                                                      class="explore-filter-menu__list-title"
                                                     >
                                                       Indoors or on my personal
                                                       property
@@ -710,16 +710,16 @@ Join me in this fun and easy cooking experience where you will learn techniques 
                                             <div
                                               id="ONLINE_QUESTION-1-radio-row"
                                               aria-disabled="false"
-                                              class="rcem0st uyl8mnh dir dir-ltr"
+                                              class="explore-filter-menu__list-padding uyl8mnh dir dir-ltr"
                                             >
                                               <label
                                                 for="ONLINE_QUESTION-1-radio-row-row-radio-button"
                                                 class="cursor-pointer"
                                                 ><div class="flex">
-                                                  <div class="_gfomxi">
+                                                  <div class="explore-filter-menu__list-label">
                                                     <div
                                                       id="ONLINE_QUESTION-1-radio-row-row-title"
-                                                      class="_gw4xx4"
+                                                      class="explore-filter-menu__list-title"
                                                     >
                                                       Outdoors and not on my
                                                       personal property
@@ -760,10 +760,10 @@ Join me in this fun and easy cooking experience where you will learn techniques 
                                           aria-disabled="false"
                                           role="group"
                                           aria-labelledby="CONCEPT_REFINEMENT_0-disclosure-row-row-title"
-                                          class="rcem0st dir dir-ltr"
+                                          class="explore-filter-menu__list-padding dir dir-ltr"
                                         >
                                           <div class="flex">
-                                            <div class="_gfomxi">
+                                            <div class="explore-filter-menu__list-label">
                                               <button
                                                 data-testid="CONCEPT_REFINEMENT_0-disclosure-row"
                                                 type="button"
@@ -772,7 +772,7 @@ Join me in this fun and easy cooking experience where you will learn techniques 
                                                 <span class="_rortwiu"
                                                   ><div
                                                     id="CONCEPT_REFINEMENT_0-disclosure-row-row-title"
-                                                    class="_gw4xx4"
+                                                    class="explore-filter-menu__list-title"
                                                   >
                                                     Dish
                                                   </div>
@@ -800,7 +800,7 @@ Join me in this fun and easy cooking experience where you will learn techniques 
                                                       </g></svg></span
                                                 ></span>
                                               </button>
-                                              <div class="_hi9sy">Other</div>
+                                              <div class="explore-filter-menu__list-desc">Other</div>
                                             </div>
                                           </div>
                                         </div>
@@ -824,10 +824,10 @@ Join me in this fun and easy cooking experience where you will learn techniques 
                                           aria-disabled="false"
                                           role="group"
                                           aria-labelledby="CONCEPT_REFINEMENT_1-disclosure-row-row-title"
-                                          class="rcem0st dir dir-ltr"
+                                          class="explore-filter-menu__list-padding dir dir-ltr"
                                         >
                                           <div class="flex">
-                                            <div class="_gfomxi">
+                                            <div class="explore-filter-menu__list-label">
                                               <button
                                                 data-testid="CONCEPT_REFINEMENT_1-disclosure-row"
                                                 type="button"
@@ -836,7 +836,7 @@ Join me in this fun and easy cooking experience where you will learn techniques 
                                                 <span class="_rortwiu"
                                                   ><div
                                                     id="CONCEPT_REFINEMENT_1-disclosure-row-row-title"
-                                                    class="_gw4xx4"
+                                                    class="explore-filter-menu__list-title"
                                                   >
                                                     Cuisine
                                                   </div>
@@ -864,7 +864,7 @@ Join me in this fun and easy cooking experience where you will learn techniques 
                                                       </g></svg></span
                                                 ></span>
                                               </button>
-                                              <div class="_hi9sy">Filipino</div>
+                                              <div class="explore-filter-menu__list-desc">Filipino</div>
                                             </div>
                                           </div>
                                         </div>
