--- a/inbox.html
+++ b/inbox.html
@@ -5205,7 +5205,7 @@
       .atm_1yfe54e_161hw1:disabled {
         color: var(--j-qkgmf);
       }
-      .dir.rcem0st[class][class] {
+      .dir.explore-filter-menu__list-padding[class][class] {
         padding-top: 24px;
         padding-bottom: 24px;
         border-radius: 1px;
@@ -5218,7 +5218,7 @@
         padding-top: 8px;
         padding-bottom: 8px;
       }
-      .dir.u6fux4d[class][class] {
+      .dir.explore-filter-menu__list-padding--reset[class][class] {
         padding-top: 0;
         padding-bottom: 0;
       }
@@ -5737,7 +5737,7 @@
       .atm_1yfe54e_161hw1:disabled {
         color: var(--j-qkgmf);
       }
-      .dir.rcem0st[class][class] {
+      .dir.explore-filter-menu__list-padding[class][class] {
         padding-top: 24px;
         padding-bottom: 24px;
         border-radius: 1px;
@@ -5750,7 +5750,7 @@
         padding-top: 8px;
         padding-bottom: 8px;
       }
-      .dir.u6fux4d[class][class] {
+      .dir.explore-filter-menu__list-padding--reset[class][class] {
         padding-top: 0;
         padding-bottom: 0;
       }
