--- a/places.html
+++ b/places.html
@@ -442,12 +442,12 @@
                                       aria-disabled="false"
                                       role="group"
                                       aria-labelledby="description-text-0-row-title"
-                                      class="rcem0st u6fux4d dir dir-ltr"
+                                      class="explore-filter-menu__list-padding explore-filter-menu__list-padding--reset dir dir-ltr"
                                     >
-                                      <div class="_gfomxi">
+                                      <div class="explore-filter-menu__list-label">
                                         <div
                                           id="description-text-0-row-title"
-                                          class="_gw4xx4"
+                                          class="explore-filter-menu__list-title"
                                         >
                                           <div class="_1tcxgp3">
                                             My buddy Gregorio is the head chef
@@ -616,12 +616,12 @@
                                       aria-disabled="false"
                                       role="group"
                                       aria-labelledby="22357569-row-title"
-                                      class="rcem0st u6fux4d dir dir-ltr"
+                                      class="explore-filter-menu__list-padding explore-filter-menu__list-padding--reset dir dir-ltr"
                                     >
-                                      <div class="_gfomxi">
+                                      <div class="explore-filter-menu__list-label">
                                         <div
                                           id="22357569-row-title"
-                                          class="_gw4xx4"
+                                          class="explore-filter-menu__list-title"
                                         >
                                           <span>
                                             <div class="_1d784e5">
@@ -703,12 +703,12 @@
                                       aria-disabled="false"
                                       role="group"
                                       aria-labelledby="22104999-row-title"
-                                      class="rcem0st u6fux4d dir dir-ltr"
+                                      class="explore-filter-menu__list-padding explore-filter-menu__list-padding--reset dir dir-ltr"
                                     >
-                                      <div class="_gfomxi">
+                                      <div class="explore-filter-menu__list-label">
                                         <div
                                           id="22104999-row-title"
-                                          class="_gw4xx4"
+                                          class="explore-filter-menu__list-title"
                                         >
                                           <span>
                                             <div class="_1d784e5">
@@ -790,12 +790,12 @@
                                       aria-disabled="false"
                                       role="group"
                                       aria-labelledby="20401625-row-title"
-                                      class="rcem0st u6fux4d dir dir-ltr"
+                                      class="explore-filter-menu__list-padding explore-filter-menu__list-padding--reset dir dir-ltr"
                                     >
-                                      <div class="_gfomxi">
+                                      <div class="explore-filter-menu__list-label">
                                         <div
                                           id="20401625-row-title"
-                                          class="_gw4xx4"
+                                          class="explore-filter-menu__list-title"
                                         >
                                           <span>
                                             <div class="_1d784e5">
@@ -873,12 +873,12 @@
                                       aria-disabled="false"
                                       role="group"
                                       aria-labelledby="20023328-row-title"
-                                      class="rcem0st u6fux4d dir dir-ltr"
+                                      class="explore-filter-menu__list-padding explore-filter-menu__list-padding--reset dir dir-ltr"
                                     >
-                                      <div class="_gfomxi">
+                                      <div class="explore-filter-menu__list-label">
                                         <div
                                           id="20023328-row-title"
-                                          class="_gw4xx4"
+                                          class="explore-filter-menu__list-title"
                                         >
                                           <span>
                                             <div class="_1d784e5">
@@ -960,12 +960,12 @@
                                       aria-disabled="false"
                                       role="group"
                                       aria-labelledby="19426397-row-title"
-                                      class="rcem0st u6fux4d dir dir-ltr"
+                                      class="explore-filter-menu__list-padding explore-filter-menu__list-padding--reset dir dir-ltr"
                                     >
-                                      <div class="_gfomxi">
+                                      <div class="explore-filter-menu__list-label">
                                         <div
                                           id="19426397-row-title"
-                                          class="_gw4xx4"
+                                          class="explore-filter-menu__list-title"
                                         >
                                           <span>
                                             <div class="_1d784e5">
@@ -16613,7 +16613,7 @@
                                   aria-disabled="false"
                                   role="group"
                                   aria-labelledby="address-row-title"
-                                  class="rcem0st cngiwj8 dir dir-ltr"
+                                  class="explore-filter-menu__list-padding cngiwj8 dir dir-ltr"
                                 >
                                   <div class="flex">
                                     <div class="_7ytxmo">
@@ -16637,10 +16637,10 @@
                                         </svg>
                                       </div>
                                     </div>
-                                    <div class="_gfomxi">
+                                    <div class="explore-filter-menu__list-label">
                                       <div
                                         id="address-row-title"
-                                        class="_gw4xx4"
+                                        class="explore-filter-menu__list-title"
                                       >
                                         <span class="text-highlight dir dir-ltr"
                                           >Location</span
@@ -16649,7 +16649,7 @@
                                         <div>Malibu, CA</div>
                                         <div>Eastern Malibu</div>
                                       </div>
-                                      <div class="_hi9sy">
+                                      <div class="explore-filter-menu__list-desc">
                                         <a
                                           rel="noopener noreferrer"
                                           target="_blank"
