--- a/resolutions_2.html
+++ b/resolutions_2.html
@@ -178,7 +178,7 @@
                         <div
                           id="reason-GUEST_OFFER_DAMAGE"
                           aria-disabled="false"
-                          class="rcem0st cngiwj8 dir dir-ltr"
+                          class="explore-filter-menu__list-padding cngiwj8 dir dir-ltr"
                         >
                           <label
                             for="reason-GUEST_OFFER_DAMAGE-row-radio-button"
@@ -194,10 +194,10 @@
                                   value="GUEST_OFFER_DAMAGE"
                                 />
                               </div>
-                              <div class="_gfomxi">
+                              <div class="explore-filter-menu__list-label">
                                 <div
                                   id="reason-GUEST_OFFER_DAMAGE-row-title"
-                                  class="_gw4xx4"
+                                  class="explore-filter-menu__list-title"
                                 >
                                   Damaged or missing items
                                 </div>
@@ -208,7 +208,7 @@
                         <div
                           id="reason-GUEST_OFFER_EXTRA"
                           aria-disabled="false"
-                          class="rcem0st cngiwj8 dir dir-ltr"
+                          class="explore-filter-menu__list-padding cngiwj8 dir dir-ltr"
                         >
                           <label
                             for="reason-GUEST_OFFER_EXTRA-row-radio-button"
@@ -224,16 +224,16 @@
                                   value="GUEST_OFFER_EXTRA"
                                 />
                               </div>
-                              <div class="_gfomxi">
+                              <div class="explore-filter-menu__list-label">
                                 <div
                                   id="reason-GUEST_OFFER_EXTRA-row-title"
-                                  class="_gw4xx4"
+                                  class="explore-filter-menu__list-title"
                                 >
                                   Extra services
                                 </div>
                                 <div
                                   id="reason-GUEST_OFFER_EXTRA-row-subtitle"
-                                  class="_hi9sy"
+                                  class="explore-filter-menu__list-desc"
                                 >
                                   Expenses that weren’t included in the cost of
                                   the reservation (ex: meals, transportation
@@ -247,7 +247,7 @@
                         <div
                           id="reason-GUEST_OFFER_OTHER"
                           aria-disabled="false"
-                          class="rcem0st cngiwj8 dir dir-ltr"
+                          class="explore-filter-menu__list-padding cngiwj8 dir dir-ltr"
                         >
                           <label
                             for="reason-GUEST_OFFER_OTHER-row-radio-button"
@@ -263,10 +263,10 @@
                                   value="GUEST_OFFER_OTHER"
                                 />
                               </div>
-                              <div class="_gfomxi">
+                              <div class="explore-filter-menu__list-label">
                                 <div
                                   id="reason-GUEST_OFFER_OTHER-row-title"
-                                  class="_gw4xx4"
+                                  class="explore-filter-menu__list-title"
                                 >
                                   Other trip-related issues
                                 </div>
