--- a/reviews.html
+++ b/reviews.html
@@ -296,9 +296,9 @@
                                 aria-disabled="false"
                                 role="group"
                                 aria-labelledby="no_show_link-row-title"
-                                class="rcem0st dir dir-ltr"
+                                class="explore-filter-menu__list-padding dir dir-ltr"
                               >
-                                <div class="_gfomxi">
+                                <div class="explore-filter-menu__list-label">
                                   <span
                                     id="no_show_link-row-title"
                                     class="_ky6m5s"
@@ -316,9 +316,9 @@
                                 aria-disabled="false"
                                 role="group"
                                 aria-labelledby="report_link-row-title"
-                                class="rcem0st dir dir-ltr"
+                                class="explore-filter-menu__list-padding dir dir-ltr"
                               >
-                                <div class="_gfomxi">
+                                <div class="explore-filter-menu__list-label">
                                   <span
                                     id="report_link-row-title"
                                     class="_ky6m5s"
@@ -368,19 +368,19 @@
                                       aria-disabled="false"
                                       role="group"
                                       aria-labelledby="expectations_option_very_high-row-title"
-                                      class="rcem0st dir dir-ltr"
+                                      class="explore-filter-menu__list-padding dir dir-ltr"
                                     >
                                       <label
                                         for="expectations_option_very_high-row-radio-button"
                                         class="cursor-pointer"
                                         ><div class="flex">
-                                          <div class="_gfomxi">
+                                          <div class="explore-filter-menu__list-label">
                                             <div class="flex">
                                               <div class="_7ytxmo"></div>
                                               <div>
                                                 <div
                                                   id="expectations_option_very_high-row-title"
-                                                  class="_gw4xx4"
+                                                  class="explore-filter-menu__list-title"
                                                 >
                                                   Much better than I expected
                                                 </div>
@@ -405,7 +405,7 @@
                                     <div
                                       id="expectations_option_very_high"
                                       aria-disabled="false"
-                                      class="rcem0st dir dir-ltr"
+                                      class="explore-filter-menu__list-padding dir dir-ltr"
                                     >
                                       <label
                                         for="expectations_option_very_high-row-radio-button"
@@ -422,13 +422,13 @@
                                               value="5"
                                             />
                                           </div>
-                                          <div class="_gfomxi">
+                                          <div class="explore-filter-menu__list-label">
                                             <div class="flex">
                                               <div class="_7ytxmo"></div>
                                               <div>
                                                 <div
                                                   id="expectations_option_very_high-row-title"
-                                                  class="_gw4xx4"
+                                                  class="explore-filter-menu__list-title"
                                                 >
                                                   Much better than I expected
                                                 </div>
@@ -447,19 +447,19 @@
                                       aria-disabled="false"
                                       role="group"
                                       aria-labelledby="expectations_option_high-row-title"
-                                      class="rcem0st dir dir-ltr"
+                                      class="explore-filter-menu__list-padding dir dir-ltr"
                                     >
                                       <label
                                         for="expectations_option_high-row-radio-button"
                                         class="cursor-pointer"
                                         ><div class="flex">
-                                          <div class="_gfomxi">
+                                          <div class="explore-filter-menu__list-label">
                                             <div class="flex">
                                               <div class="_7ytxmo"></div>
                                               <div>
                                                 <div
                                                   id="expectations_option_high-row-title"
-                                                  class="_gw4xx4"
+                                                  class="explore-filter-menu__list-title"
                                                 >
                                                   A bit better than I expected
                                                 </div>
@@ -484,7 +484,7 @@
                                     <div
                                       id="expectations_option_high"
                                       aria-disabled="false"
-                                      class="rcem0st dir dir-ltr"
+                                      class="explore-filter-menu__list-padding dir dir-ltr"
                                     >
                                       <label
                                         for="expectations_option_high-row-radio-button"
@@ -501,13 +501,13 @@
                                               value="4"
                                             />
                                           </div>
-                                          <div class="_gfomxi">
+                                          <div class="explore-filter-menu__list-label">
                                             <div class="flex">
                                               <div class="_7ytxmo"></div>
                                               <div>
                                                 <div
                                                   id="expectations_option_high-row-title"
-                                                  class="_gw4xx4"
+                                                  class="explore-filter-menu__list-title"
                                                 >
                                                   A bit better than I expected
                                                 </div>
@@ -526,19 +526,19 @@
                                       aria-disabled="false"
                                       role="group"
                                       aria-labelledby="expectations_option_neutral-row-title"
-                                      class="rcem0st dir dir-ltr"
+                                      class="explore-filter-menu__list-padding dir dir-ltr"
                                     >
                                       <label
                                         for="expectations_option_neutral-row-radio-button"
                                         class="cursor-pointer"
                                         ><div class="flex">
-                                          <div class="_gfomxi">
+                                          <div class="explore-filter-menu__list-label">
                                             <div class="flex">
                                               <div class="_7ytxmo"></div>
                                               <div>
                                                 <div
                                                   id="expectations_option_neutral-row-title"
-                                                  class="_gw4xx4"
+                                                  class="explore-filter-menu__list-title"
                                                 >
                                                   About the same as I expected
                                                 </div>
@@ -563,7 +563,7 @@
                                     <div
                                       id="expectations_option_neutral"
                                       aria-disabled="false"
-                                      class="rcem0st dir dir-ltr"
+                                      class="explore-filter-menu__list-padding dir dir-ltr"
                                     >
                                       <label
                                         for="expectations_option_neutral-row-radio-button"
@@ -580,13 +580,13 @@
                                               value="3"
                                             />
                                           </div>
-                                          <div class="_gfomxi">
+                                          <div class="explore-filter-menu__list-label">
                                             <div class="flex">
                                               <div class="_7ytxmo"></div>
                                               <div>
                                                 <div
                                                   id="expectations_option_neutral-row-title"
-                                                  class="_gw4xx4"
+                                                  class="explore-filter-menu__list-title"
                                                 >
                                                   About the same as I expected
                                                 </div>
@@ -605,19 +605,19 @@
                                       aria-disabled="false"
                                       role="group"
                                       aria-labelledby="expectations_option_low-row-title"
-                                      class="rcem0st dir dir-ltr"
+                                      class="explore-filter-menu__list-padding dir dir-ltr"
                                     >
                                       <label
                                         for="expectations_option_low-row-radio-button"
                                         class="cursor-pointer"
                                         ><div class="flex">
-                                          <div class="_gfomxi">
+                                          <div class="explore-filter-menu__list-label">
                                             <div class="flex">
                                               <div class="_7ytxmo"></div>
                                               <div>
                                                 <div
                                                   id="expectations_option_low-row-title"
-                                                  class="_gw4xx4"
+                                                  class="explore-filter-menu__list-title"
                                                 >
                                                   A bit worse than I expected
                                                 </div>
@@ -642,7 +642,7 @@
                                     <div
                                       id="expectations_option_low"
                                       aria-disabled="false"
-                                      class="rcem0st dir dir-ltr"
+                                      class="explore-filter-menu__list-padding dir dir-ltr"
                                     >
                                       <label
                                         for="expectations_option_low-row-radio-button"
@@ -659,13 +659,13 @@
                                               value="2"
                                             />
                                           </div>
-                                          <div class="_gfomxi">
+                                          <div class="explore-filter-menu__list-label">
                                             <div class="flex">
                                               <div class="_7ytxmo"></div>
                                               <div>
                                                 <div
                                                   id="expectations_option_low-row-title"
-                                                  class="_gw4xx4"
+                                                  class="explore-filter-menu__list-title"
                                                 >
                                                   A bit worse than I expected
                                                 </div>
@@ -684,19 +684,19 @@
                                       aria-disabled="false"
                                       role="group"
                                       aria-labelledby="expectations_option_very_low-row-title"
-                                      class="rcem0st dir dir-ltr"
+                                      class="explore-filter-menu__list-padding dir dir-ltr"
                                     >
                                       <label
                                         for="expectations_option_very_low-row-radio-button"
                                         class="cursor-pointer"
                                         ><div class="flex">
-                                          <div class="_gfomxi">
+                                          <div class="explore-filter-menu__list-label">
                                             <div class="flex">
                                               <div class="_7ytxmo"></div>
                                               <div>
                                                 <div
                                                   id="expectations_option_very_low-row-title"
-                                                  class="_gw4xx4"
+                                                  class="explore-filter-menu__list-title"
                                                 >
                                                   Much worse than I expected
                                                 </div>
@@ -721,7 +721,7 @@
                                     <div
                                       id="expectations_option_very_low"
                                       aria-disabled="false"
-                                      class="rcem0st dir dir-ltr"
+                                      class="explore-filter-menu__list-padding dir dir-ltr"
                                     >
                                       <label
                                         for="expectations_option_very_low-row-radio-button"
@@ -738,13 +738,13 @@
                                               value="1"
                                             />
                                           </div>
-                                          <div class="_gfomxi">
+                                          <div class="explore-filter-menu__list-label">
                                             <div class="flex">
                                               <div class="_7ytxmo"></div>
                                               <div>
                                                 <div
                                                   id="expectations_option_very_low-row-title"
-                                                  class="_gw4xx4"
+                                                  class="explore-filter-menu__list-title"
                                                 >
                                                   Much worse than I expected
                                                 </div>
