--- a/signup_login.html
+++ b/signup_login.html
@@ -2951,14 +2951,14 @@
                                         /><label
                                           class="flex dir dir-ltr"
                                           for="email-signupuser_profile_info[receive_promotional_email]"
-                                          ><span class="_10ndlvp"
+                                          ><span class="explore-filter-menu__list-content"
                                             ><input
                                               id="email-signupuser_profile_info[receive_promotional_email]"
                                               name="email-signupuser_profile_info[receive_promotional_email]"
                                               class="form__check-input"
                                               type="checkbox"
                                               value="1" /><span
-                                              class="_41yoza"
+                                              class="explore-filter-menu__list-checkbox"
                                               data-checkbox="true"
                                             ></span></span
                                           ><span
@@ -2979,7 +2979,7 @@
                                         /><label
                                           class="flex dir dir-ltr"
                                           for="email-signupuser_profile_info[receive_promotional_email]"
-                                          ><span class="_10ndlvp"
+                                          ><span class="explore-filter-menu__list-content"
                                             ><input
                                               id="email-signupuser_profile_info[receive_promotional_email]"
                                               name="email-signupuser_profile_info[receive_promotional_email]"
@@ -5976,14 +5976,14 @@
                                       /><label
                                         class="flex dir dir-ltr"
                                         for="email-signupuser_profile_info[receive_promotional_email]"
-                                        ><span class="_10ndlvp"
+                                        ><span class="explore-filter-menu__list-content"
                                           ><input
                                             id="email-signupuser_profile_info[receive_promotional_email]"
                                             name="email-signupuser_profile_info[receive_promotional_email]"
                                             class="form__check-input"
                                             type="checkbox"
                                             value="1" /><span
-                                            class="_41yoza"
+                                            class="explore-filter-menu__list-checkbox"
                                             data-checkbox="true"
                                           ></span></span
                                         ><span
@@ -6004,7 +6004,7 @@
                                       /><label
                                         class="flex dir dir-ltr"
                                         for="email-signupuser_profile_info[receive_promotional_email]"
-                                        ><span class="_10ndlvp"
+                                        ><span class="explore-filter-menu__list-content"
                                           ><input
                                             id="email-signupuser_profile_info[receive_promotional_email]"
                                             name="email-signupuser_profile_info[receive_promotional_email]"
