--- a/submission/review.html
+++ b/submission/review.html
@@ -1092,10 +1092,10 @@
                                       aria-disabled="false"
                                       role="group"
                                       aria-labelledby="disclosure-action-row-row-title"
-                                      class="rcem0st cngiwj8 dir dir-ltr"
+                                      class="explore-filter-menu__list-padding cngiwj8 dir dir-ltr"
                                     >
                                       <div class="flex">
-                                        <div class="_gfomxi">
+                                        <div class="explore-filter-menu__list-label">
                                           <button
                                             type="button"
                                             class="_u1thwpg"
@@ -1103,7 +1103,7 @@
                                             <span class="_rortwiu"
                                               ><div
                                                 id="disclosure-action-row-row-title"
-                                                class="_gw4xx4"
+                                                class="explore-filter-menu__list-title"
                                               >
                                                 <span class="_tt122m"
                                                   >Local laws</span
@@ -1164,10 +1164,10 @@
                                       aria-disabled="false"
                                       role="group"
                                       aria-labelledby="disclosure-action-row-row-title"
-                                      class="rcem0st cngiwj8 dir dir-ltr"
+                                      class="explore-filter-menu__list-padding cngiwj8 dir dir-ltr"
                                     >
                                       <div class="flex">
-                                        <div class="_gfomxi">
+                                        <div class="explore-filter-menu__list-label">
                                           <button
                                             type="button"
                                             class="_u1thwpg"
@@ -1175,7 +1175,7 @@
                                             <span class="_rortwiu"
                                               ><div
                                                 id="disclosure-action-row-row-title"
-                                                class="_gw4xx4"
+                                                class="explore-filter-menu__list-title"
                                               >
                                                 <span class="_tt122m"
                                                   >Tour guiding</span
@@ -1236,10 +1236,10 @@
                                       aria-disabled="false"
                                       role="group"
                                       aria-labelledby="disclosure-action-row-row-title"
-                                      class="rcem0st cngiwj8 dir dir-ltr"
+                                      class="explore-filter-menu__list-padding cngiwj8 dir dir-ltr"
                                     >
                                       <div class="flex">
-                                        <div class="_gfomxi">
+                                        <div class="explore-filter-menu__list-label">
                                           <button
                                             type="button"
                                             class="_u1thwpg"
@@ -1247,7 +1247,7 @@
                                             <span class="_rortwiu"
                                               ><div
                                                 id="disclosure-action-row-row-title"
-                                                class="_gw4xx4"
+                                                class="explore-filter-menu__list-title"
                                               >
                                                 <span class="_tt122m"
                                                   >Animals</span
@@ -1289,16 +1289,16 @@
                               aria-disabled="false"
                               role="group"
                               aria-labelledby="info_is_compliant_with_all_laws-row-title"
-                              class="rcem0st dir dir-ltr"
+                              class="explore-filter-menu__list-padding dir dir-ltr"
                             >
                               <label
                                 for="info_is_compliant_with_all_laws-row-checkbox"
                                 class="cursor-pointer"
                                 ><div class="flex">
-                                  <div class="_gfomxi">
+                                  <div class="explore-filter-menu__list-label">
                                     <div
                                       id="info_is_compliant_with_all_laws-row-title"
-                                      class="_gw4xx4"
+                                      class="explore-filter-menu__list-title"
                                     >
                                       <div class="_uvcwnv">
                                         By selecting this checkbox, I attest
@@ -1316,7 +1316,7 @@
                                     </div>
                                   </div>
                                   <div class="_1mqc21n">
-                                    <span class="_10ndlvp"
+                                    <span class="explore-filter-menu__list-content"
                                       ><input
                                         name="info_is_compliant_with_all_laws"
                                         aria-labelledby="info_is_compliant_with_all_laws-row-title"
@@ -1324,7 +1324,7 @@
                                         class="form__check-input"
                                         aria-invalid="false"
                                         type="checkbox" /><span
-                                        class="_41yoza"
+                                        class="explore-filter-menu__list-checkbox"
                                         data-checkbox="true"
                                       ></span
                                     ></span>
@@ -1336,16 +1336,16 @@
                               aria-disabled="false"
                               role="group"
                               aria-labelledby="info_is_compliant_with_airbnb_policies-row-title"
-                              class="rcem0st dir dir-ltr"
+                              class="explore-filter-menu__list-padding dir dir-ltr"
                             >
                               <label
                                 for="info_is_compliant_with_airbnb_policies-row-checkbox"
                                 class="cursor-pointer"
                                 ><div class="flex">
-                                  <div class="_gfomxi">
+                                  <div class="explore-filter-menu__list-label">
                                     <div
                                       id="info_is_compliant_with_airbnb_policies-row-title"
-                                      class="_gw4xx4"
+                                      class="explore-filter-menu__list-title"
                                     >
                                       <div class="_uvcwnv">
                                         <div class="inline">
@@ -1382,7 +1382,7 @@
                                     </div>
                                   </div>
                                   <div class="_1mqc21n">
-                                    <span class="_10ndlvp"
+                                    <span class="explore-filter-menu__list-content"
                                       ><input
                                         name="info_is_compliant_with_airbnb_policies"
                                         aria-labelledby="info_is_compliant_with_airbnb_policies-row-title"
@@ -1390,7 +1390,7 @@
                                         class="form__check-input"
                                         aria-invalid="false"
                                         type="checkbox" /><span
-                                        class="_41yoza"
+                                        class="explore-filter-menu__list-checkbox"
                                         data-checkbox="true"
                                       ></span
                                     ></span>
