--- a/submission/wwd.html
+++ b/submission/wwd.html
@@ -1291,16 +1291,16 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
                                   <div
                                     id="info_where_are_you_broadcasting-Indoors or on my personal property"
                                     aria-disabled="false"
-                                    class="rcem0st uyl8mnh dir dir-ltr"
+                                    class="explore-filter-menu__list-padding uyl8mnh dir dir-ltr"
                                   >
                                     <label
                                       for="info_where_are_you_broadcasting-Indoors or on my personal property-row-radio-button"
                                       class="cursor-pointer"
                                       ><div class="flex">
-                                        <div class="_gfomxi">
+                                        <div class="explore-filter-menu__list-label">
                                           <div
                                             id="info_where_are_you_broadcasting-Indoors or on my personal property-row-title"
-                                            class="_gw4xx4"
+                                            class="explore-filter-menu__list-title"
                                           >
                                             Indoors or on my personal property
                                           </div>
@@ -1329,16 +1329,16 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
                                   <div
                                     id="info_where_are_you_broadcasting-Outdoors and not on my personal property"
                                     aria-disabled="false"
-                                    class="rcem0st uyl8mnh dir dir-ltr"
+                                    class="explore-filter-menu__list-padding uyl8mnh dir dir-ltr"
                                   >
                                     <label
                                       for="info_where_are_you_broadcasting-Outdoors and not on my personal property-row-radio-button"
                                       class="cursor-pointer"
                                       ><div class="flex">
-                                        <div class="_gfomxi">
+                                        <div class="explore-filter-menu__list-label">
                                           <div
                                             id="info_where_are_you_broadcasting-Outdoors and not on my personal property-row-title"
-                                            class="_gw4xx4"
+                                            class="explore-filter-menu__list-title"
                                           >
                                             Outdoors and not on my personal
                                             property
@@ -1375,15 +1375,15 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
                                   aria-disabled="false"
                                   role="group"
                                   aria-labelledby="CustomView:113-row-title"
-                                  class="rcem0st dir dir-ltr"
+                                  class="explore-filter-menu__list-padding dir dir-ltr"
                                 >
                                   <div class="flex">
-                                    <div class="_gfomxi">
+                                    <div class="explore-filter-menu__list-label">
                                       <button type="button" class="_u1thwpg">
                                         <span class="_rortwiu"
                                           ><div
                                             id="CustomView:113-row-title"
-                                            class="_gw4xx4"
+                                            class="explore-filter-menu__list-title"
                                           >
                                             Animal species
                                           </div>
@@ -1411,7 +1411,7 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
                                               </g></svg></span
                                         ></span>
                                       </button>
-                                      <div class="_hi9sy">Alligator</div>
+                                      <div class="explore-filter-menu__list-desc">Alligator</div>
                                     </div>
                                   </div>
                                 </div>
