--- a/account-notifications.html
+++ b/account-notifications.html
@@ -659,29 +659,29 @@
                                             aria-disabled="false"
                                             role="group"
                                             aria-labelledby="undefinedEMAIL-row-title"
-                                            class="rcem0st dir dir-ltr"
+                                            class="explore-filter-menu__list-padding dir dir-ltr"
                                           >
                                             <label
                                               for="undefinedEMAIL-row-checkbox"
                                               class="cursor-pointer"
                                               ><div class="flex">
-                                                <div class="_gfomxi">
+                                                <div class="explore-filter-menu__list-label">
                                                   <div
                                                     id="undefinedEMAIL-row-title"
-                                                    class="_gw4xx4"
+                                                    class="explore-filter-menu__list-title"
                                                   >
                                                     Unsubscribe from all
                                                     marketing emails
                                                   </div>
                                                 </div>
                                                 <div class="_1mqc21n">
-                                                  <span class="_10ndlvp"
+                                                  <span class="explore-filter-menu__list-content"
                                                     ><input
                                                       aria-labelledby="undefinedEMAIL-row-title"
                                                       id="undefinedEMAIL-row-checkbox"
                                                       class="form__check-input"
                                                       type="checkbox" /><span
-                                                      class="_41yoza"
+                                                      class="explore-filter-menu__list-checkbox"
                                                       data-checkbox="true"
                                                     ></span
                                                   ></span>
@@ -1456,27 +1456,27 @@
                                                 aria-disabled="false"
                                                 role="group"
                                                 aria-labelledby="undefinedEMAIL-row-title"
-                                                class="rcem0st dir dir-ltr"
+                                                class="explore-filter-menu__list-padding dir dir-ltr"
                                               >
                                                 <label
                                                   for="undefinedEMAIL-row-checkbox"
                                                   class="cursor-pointer"
                                                   ><div class="flex">
                                                     <div class="_7ytxmo">
-                                                      <span class="_10ndlvp"
+                                                      <span class="explore-filter-menu__list-content"
                                                         ><input
                                                           type="checkbox"
                                                           id="undefinedEMAIL-row-checkbox"
                                                           class="form__check-input" /><span
-                                                          class="_41yoza"
+                                                          class="explore-filter-menu__list-checkbox"
                                                           data-checkbox="true"
                                                         ></span
                                                       ></span>
                                                     </div>
-                                                    <div class="_gfomxi">
+                                                    <div class="explore-filter-menu__list-label">
                                                       <div
                                                         id="undefinedEMAIL-row-title"
-                                                        class="_gw4xx4"
+                                                        class="explore-filter-menu__list-title"
                                                       >
                                                         Unsubscribe from all
                                                         marketing emails
@@ -2384,13 +2384,13 @@
                       aria-disabled="false"
                       role="group"
                       aria-labelledby="HOST_RECOGNITION_ACHIEVEMENTSEMAIL-row-title"
-                      class="rcem0st dir dir-ltr"
+                      class="explore-filter-menu__list-padding dir dir-ltr"
                     >
                       <div class="flex">
-                        <div class="_gfomxi">
+                        <div class="explore-filter-menu__list-label">
                           <div
                             id="HOST_RECOGNITION_ACHIEVEMENTSEMAIL-row-title"
-                            class="_gw4xx4"
+                            class="explore-filter-menu__list-title"
                           >
                             Email
                           </div>
@@ -2433,13 +2433,13 @@
                       aria-disabled="false"
                       role="group"
                       aria-labelledby="HOST_RECOGNITION_ACHIEVEMENTSSMS-row-title"
-                      class="rcem0st dir dir-ltr"
+                      class="explore-filter-menu__list-padding dir dir-ltr"
                     >
                       <div class="flex">
-                        <div class="_gfomxi">
+                        <div class="explore-filter-menu__list-label">
                           <div
                             id="HOST_RECOGNITION_ACHIEVEMENTSSMS-row-title"
-                            class="_gw4xx4"
+                            class="explore-filter-menu__list-title"
                           >
                             SMS
                           </div>
@@ -2463,13 +2463,13 @@
                       aria-disabled="false"
                       role="group"
                       aria-labelledby="HOST_RECOGNITION_ACHIEVEMENTSVOICE-row-title"
-                      class="rcem0st dir dir-ltr"
+                      class="explore-filter-menu__list-padding dir dir-ltr"
                     >
                       <div class="flex">
-                        <div class="_gfomxi">
+                        <div class="explore-filter-menu__list-label">
                           <div
                             id="HOST_RECOGNITION_ACHIEVEMENTSVOICE-row-title"
-                            class="_gw4xx4"
+                            class="explore-filter-menu__list-title"
                           >
                             Phone calls
                           </div>
@@ -2493,13 +2493,13 @@
                       aria-disabled="false"
                       role="group"
                       aria-labelledby="HOST_RECOGNITION_ACHIEVEMENTSWEB_PUSH-row-title"
-                      class="rcem0st dir dir-ltr"
+                      class="explore-filter-menu__list-padding dir dir-ltr"
                     >
                       <div class="flex">
-                        <div class="_gfomxi">
+                        <div class="explore-filter-menu__list-label">
                           <div
                             id="HOST_RECOGNITION_ACHIEVEMENTSWEB_PUSH-row-title"
-                            class="_gw4xx4"
+                            class="explore-filter-menu__list-title"
                           >
                             Browser notifications
                           </div>
