--- a/become-a-host/legal.html
+++ b/become-a-host/legal.html
@@ -206,23 +206,23 @@
                                 aria-disabled="false"
                                 role="group"
                                 aria-labelledby="SURVEILLANCE-row-title"
-                                class="rcem0st uyl8mnh dir dir-ltr"
+                                class="explore-filter-menu__list-padding uyl8mnh dir dir-ltr"
                               >
                                 <label
                                   for="SURVEILLANCE-row-checkbox"
                                   class="cursor-pointer"
                                 >
                                   <div class="flex">
-                                    <div class="_gfomxi">
+                                    <div class="explore-filter-menu__list-label">
                                       <div
                                         id="SURVEILLANCE-row-title"
-                                        class="_gw4xx4"
+                                        class="explore-filter-menu__list-title"
                                       >
                                         Security camera(s)
                                       </div>
                                     </div>
                                     <div class="_1mqc21n">
-                                      <span class="_10ndlvp"
+                                      <span class="explore-filter-menu__list-content"
                                         ><input
                                           type="checkbox"
                                           name="SURVEILLANCE"
@@ -268,30 +268,30 @@
                                 aria-disabled="false"
                                 role="group"
                                 aria-labelledby="WEAPONS-row-title"
-                                class="rcem0st uyl8mnh dir dir-ltr"
+                                class="explore-filter-menu__list-padding uyl8mnh dir dir-ltr"
                               >
                                 <label
                                   for="WEAPONS-row-checkbox"
                                   class="cursor-pointer"
                                 >
                                   <div class="flex">
-                                    <div class="_gfomxi">
+                                    <div class="explore-filter-menu__list-label">
                                       <div
                                         id="WEAPONS-row-title"
-                                        class="_gw4xx4"
+                                        class="explore-filter-menu__list-title"
                                       >
                                         Weapons
                                       </div>
                                     </div>
                                     <div class="_1mqc21n">
-                                      <span class="_10ndlvp"
+                                      <span class="explore-filter-menu__list-content"
                                         ><input
                                           type="checkbox"
                                           name="WEAPONS"
                                           aria-labelledby="WEAPONS-row-title"
                                           id="WEAPONS-row-checkbox"
                                           class="form__check-input" /><span
-                                          class="_41yoza"
+                                          class="explore-filter-menu__list-checkbox"
                                           data-checkbox="true"
                                         ></span
                                       ></span>
@@ -309,30 +309,30 @@
                                 aria-disabled="false"
                                 role="group"
                                 aria-labelledby="ANIMALS-row-title"
-                                class="rcem0st uyl8mnh dir dir-ltr"
+                                class="explore-filter-menu__list-padding uyl8mnh dir dir-ltr"
                               >
                                 <label
                                   for="ANIMALS-row-checkbox"
                                   class="cursor-pointer"
                                 >
                                   <div class="flex">
-                                    <div class="_gfomxi">
+                                    <div class="explore-filter-menu__list-label">
                                       <div
                                         id="ANIMALS-row-title"
-                                        class="_gw4xx4"
+                                        class="explore-filter-menu__list-title"
                                       >
                                         Dangerous animals
                                       </div>
                                     </div>
                                     <div class="_1mqc21n">
-                                      <span class="_10ndlvp"
+                                      <span class="explore-filter-menu__list-content"
                                         ><input
                                           type="checkbox"
                                           name="ANIMALS"
                                           aria-labelledby="ANIMALS-row-title"
                                           id="ANIMALS-row-checkbox"
                                           class="form__check-input" /><span
-                                          class="_41yoza"
+                                          class="explore-filter-menu__list-checkbox"
                                           data-checkbox="true"
                                         ></span
                                       ></span>
