--- a/edit/GuestReq.html
+++ b/edit/GuestReq.html
@@ -513,16 +513,16 @@
                                             aria-disabled="false"
                                             role="group"
                                             aria-labelledby="underTwo-row-title"
-                                            class="rcem0st uyl8mnh dir dir-ltr"
+                                            class="explore-filter-menu__list-padding uyl8mnh dir dir-ltr"
                                           >
                                             <label
                                               for="underTwo-row-checkbox"
                                               class="cursor-pointer"
                                               ><div class="flex">
-                                                <div class="_gfomxi">
+                                                <div class="explore-filter-menu__list-label">
                                                   <div
                                                     id="underTwo-row-title"
-                                                    class="_gw4xx4"
+                                                    class="explore-filter-menu__list-title"
                                                   >
                                                     <span
                                                       class="ll4r2nl dir dir-ltr"
@@ -532,13 +532,13 @@
                                                   </div>
                                                 </div>
                                                 <div class="_1mqc21n">
-                                                  <span class="_10ndlvp"
+                                                  <span class="explore-filter-menu__list-content"
                                                     ><input
                                                       aria-labelledby="underTwo-row-title"
                                                       id="underTwo-row-checkbox"
                                                       class="form__check-input"
                                                       type="checkbox" /><span
-                                                      class="_41yoza"
+                                                      class="explore-filter-menu__list-checkbox"
                                                       data-checkbox="true"
                                                     ></span
                                                   ></span>
@@ -585,16 +585,16 @@
                                             aria-disabled="false"
                                             role="group"
                                             aria-labelledby="Tag:4804-row-title"
-                                            class="rcem0st uyl8mnh dir dir-ltr"
+                                            class="explore-filter-menu__list-padding uyl8mnh dir dir-ltr"
                                           >
                                             <label
                                               for="Tag:4804-row-checkbox"
                                               class="cursor-pointer"
                                               ><div class="flex">
-                                                <div class="_gfomxi">
+                                                <div class="explore-filter-menu__list-label">
                                                   <div
                                                     id="Tag:4804-row-title"
-                                                    class="_gw4xx4"
+                                                    class="explore-filter-menu__list-title"
                                                   >
                                                     <span
                                                       class="ll4r2nl dir dir-ltr"
@@ -613,14 +613,14 @@
                                                   </div>
                                                 </div>
                                                 <div class="_1mqc21n">
-                                                  <span class="_10ndlvp"
+                                                  <span class="explore-filter-menu__list-content"
                                                     ><input
                                                       aria-labelledby="Tag:4804-row-title"
                                                       aria-describedby="Tag:4804-row-subtitle"
                                                       id="Tag:4804-row-checkbox"
                                                       class="form__check-input"
                                                       type="checkbox" /><span
-                                                      class="_41yoza"
+                                                      class="explore-filter-menu__list-checkbox"
                                                       data-checkbox="true"
                                                     ></span
                                                   ></span>
@@ -632,16 +632,16 @@
                                             aria-disabled="false"
                                             role="group"
                                             aria-labelledby="Tag:4802-row-title"
-                                            class="rcem0st uyl8mnh dir dir-ltr"
+                                            class="explore-filter-menu__list-padding uyl8mnh dir dir-ltr"
                                           >
                                             <label
                                               for="Tag:4802-row-checkbox"
                                               class="cursor-pointer"
                                               ><div class="flex">
-                                                <div class="_gfomxi">
+                                                <div class="explore-filter-menu__list-label">
                                                   <div
                                                     id="Tag:4802-row-title"
-                                                    class="_gw4xx4"
+                                                    class="explore-filter-menu__list-title"
                                                   >
                                                     <span
                                                       class="ll4r2nl dir dir-ltr"
@@ -661,14 +661,14 @@
                                                   </div>
                                                 </div>
                                                 <div class="_1mqc21n">
-                                                  <span class="_10ndlvp"
+                                                  <span class="explore-filter-menu__list-content"
                                                     ><input
                                                       aria-labelledby="Tag:4802-row-title"
                                                       aria-describedby="Tag:4802-row-subtitle"
                                                       id="Tag:4802-row-checkbox"
                                                       class="form__check-input"
                                                       type="checkbox" /><span
-                                                      class="_41yoza"
+                                                      class="explore-filter-menu__list-checkbox"
                                                       data-checkbox="true"
                                                     ></span
                                                   ></span>
@@ -680,16 +680,16 @@
                                             aria-disabled="false"
                                             role="group"
                                             aria-labelledby="Tag:4805-row-title"
-                                            class="rcem0st uyl8mnh dir dir-ltr"
+                                            class="explore-filter-menu__list-padding uyl8mnh dir dir-ltr"
                                           >
                                             <label
                                               for="Tag:4805-row-checkbox"
                                               class="cursor-pointer"
                                               ><div class="flex">
-                                                <div class="_gfomxi">
+                                                <div class="explore-filter-menu__list-label">
                                                   <div
                                                     id="Tag:4805-row-title"
-                                                    class="_gw4xx4"
+                                                    class="explore-filter-menu__list-title"
                                                   >
                                                     <span
                                                       class="ll4r2nl dir dir-ltr"
@@ -708,14 +708,14 @@
                                                   </div>
                                                 </div>
                                                 <div class="_1mqc21n">
-                                                  <span class="_10ndlvp"
+                                                  <span class="explore-filter-menu__list-content"
                                                     ><input
                                                       aria-labelledby="Tag:4805-row-title"
                                                       aria-describedby="Tag:4805-row-subtitle"
                                                       id="Tag:4805-row-checkbox"
                                                       class="form__check-input"
                                                       type="checkbox" /><span
-                                                      class="_41yoza"
+                                                      class="explore-filter-menu__list-checkbox"
                                                       data-checkbox="true"
                                                     ></span
                                                   ></span>
@@ -972,16 +972,16 @@ Guests should know how to fry food and also bring boiled eggs.</textarea
                                             aria-disabled="false"
                                             role="group"
                                             aria-labelledby="requireIdVerification-row-title"
-                                            class="rcem0st uyl8mnh dir dir-ltr"
+                                            class="explore-filter-menu__list-padding uyl8mnh dir dir-ltr"
                                           >
                                             <label
                                               for="requireIdVerification-row-checkbox"
                                               class="cursor-pointer"
                                               ><div class="flex">
-                                                <div class="_gfomxi">
+                                                <div class="explore-filter-menu__list-label">
                                                   <div
                                                     id="requireIdVerification-row-title"
-                                                    class="_gw4xx4"
+                                                    class="explore-filter-menu__list-title"
                                                   >
                                                     <span
                                                       class="ll4r2nl dir dir-ltr"
@@ -997,13 +997,13 @@ Guests should know how to fry food and also bring boiled eggs.</textarea
                                                   </div>
                                                 </div>
                                                 <div class="_1mqc21n">
-                                                  <span class="_10ndlvp"
+                                                  <span class="explore-filter-menu__list-content"
                                                     ><input
                                                       aria-labelledby="requireIdVerification-row-title"
                                                       id="requireIdVerification-row-checkbox"
                                                       class="form__check-input"
                                                       type="checkbox" /><span
-                                                      class="_41yoza"
+                                                      class="explore-filter-menu__list-checkbox"
                                                       data-checkbox="true"
                                                     ></span
                                                   ></span>
