--- a/edit/about.html
+++ b/edit/about.html
@@ -455,7 +455,7 @@
                                           aria-disabled="false"
                                           role="group"
                                           aria-labelledby="ABOUT_YOU_PROFILE_EDIT_LINKS-row-title"
-                                          class="rcem0st u6fux4d dir dir-ltr"
+                                          class="explore-filter-menu__list-padding explore-filter-menu__list-padding--reset dir dir-ltr"
                                         >
                                           <div class="flex">
                                             <div class="_7ytxmo">
@@ -492,16 +492,16 @@
                                                 </div>
                                               </div>
                                             </div>
-                                            <div class="_gfomxi">
+                                            <div class="explore-filter-menu__list-label">
                                               <div
                                                 id="ABOUT_YOU_PROFILE_EDIT_LINKS-row-title"
-                                                class="_gw4xx4"
+                                                class="explore-filter-menu__list-title"
                                               >
                                                 Jose Angelo
                                               </div>
                                               <div
                                                 id="ABOUT_YOU_PROFILE_EDIT_LINKS-row-subtitle"
-                                                class="_hi9sy"
+                                                class="explore-filter-menu__list-desc"
                                               >
                                                 PH
                                               </div>
