--- a/payments/payment-methods.html
+++ b/payments/payment-methods.html
@@ -330,7 +330,7 @@
                                                     aria-disabled="false"
                                                     role="group"
                                                     aria-labelledby="payment-methods-payment-instrument-row-title-1435214401"
-                                                    class="rcem0st dir dir-ltr"
+                                                    class="explore-filter-menu__list-padding dir dir-ltr"
                                                   >
                                                     <div class="flex">
                                                       <div class="_7ytxmo">
@@ -533,13 +533,13 @@
                                                 aria-disabled="false"
                                                 role="group"
                                                 aria-labelledby="credit-section-0-gifts-actions-no-transaction-title"
-                                                class="rcem0st dir dir-ltr"
+                                                class="explore-filter-menu__list-padding dir dir-ltr"
                                               >
                                                 <div class="flex">
-                                                  <div class="_gfomxi">
+                                                  <div class="explore-filter-menu__list-label">
                                                     <div
                                                       id="credit-section-0-gifts-actions-no-transaction-title"
-                                                      class="_gw4xx4"
+                                                      class="explore-filter-menu__list-title"
                                                     >
                                                       Current credit balance
                                                     </div>
@@ -590,13 +590,13 @@
                                                 aria-disabled="false"
                                                 role="group"
                                                 aria-labelledby="undefined-no-transaction-title"
-                                                class="rcem0st dir dir-ltr"
+                                                class="explore-filter-menu__list-padding dir dir-ltr"
                                               >
                                                 <div class="flex">
-                                                  <div class="_gfomxi">
+                                                  <div class="explore-filter-menu__list-label">
                                                     <div
                                                       id="undefined-no-transaction-title"
-                                                      class="_gw4xx4"
+                                                      class="explore-filter-menu__list-title"
                                                     >
                                                       Your coupons
                                                     </div>
@@ -1078,7 +1078,7 @@
                                                     aria-disabled="false"
                                                     role="group"
                                                     aria-labelledby="payment-methods-payment-instrument-row-title-1435214401"
-                                                    class="rcem0st dir dir-ltr"
+                                                    class="explore-filter-menu__list-padding dir dir-ltr"
                                                   >
                                                     <div class="flex">
                                                       <div class="_7ytxmo">
@@ -1281,13 +1281,13 @@
                                                 aria-disabled="false"
                                                 role="group"
                                                 aria-labelledby="credit-section-0-gifts-actions-no-transaction-title"
-                                                class="rcem0st dir dir-ltr"
+                                                class="explore-filter-menu__list-padding dir dir-ltr"
                                               >
                                                 <div class="flex">
-                                                  <div class="_gfomxi">
+                                                  <div class="explore-filter-menu__list-label">
                                                     <div
                                                       id="credit-section-0-gifts-actions-no-transaction-title"
-                                                      class="_gw4xx4"
+                                                      class="explore-filter-menu__list-title"
                                                     >
                                                       Current credit balance
                                                     </div>
@@ -1338,13 +1338,13 @@
                                                 aria-disabled="false"
                                                 role="group"
                                                 aria-labelledby="undefined-no-transaction-title"
-                                                class="rcem0st dir dir-ltr"
+                                                class="explore-filter-menu__list-padding dir dir-ltr"
                                               >
                                                 <div class="flex">
-                                                  <div class="_gfomxi">
+                                                  <div class="explore-filter-menu__list-label">
                                                     <div
                                                       id="undefined-no-transaction-title"
-                                                      class="_gw4xx4"
+                                                      class="explore-filter-menu__list-title"
                                                     >
                                                       Your coupons
                                                     </div>
