--- a/resolutions.html
+++ b/resolutions.html
@@ -154,7 +154,7 @@
                       <div
                         id="intent-send-money"
                         aria-disabled="false"
-                        class="rcem0st cngiwj8 dir dir-ltr"
+                        class="explore-filter-menu__list-padding cngiwj8 dir dir-ltr"
                       >
                         <label
                           for="intent-send-money-row-radio-button"
@@ -171,10 +171,10 @@
                                 checked=""
                               />
                             </div>
-                            <div class="_gfomxi">
+                            <div class="explore-filter-menu__list-label">
                               <div
                                 id="intent-send-money-row-title"
-                                class="_gw4xx4"
+                                class="explore-filter-menu__list-title"
                               >
                                 Send money
                               </div>
@@ -185,7 +185,7 @@
                       <div
                         id="intent-request-money"
                         aria-disabled="false"
-                        class="rcem0st cngiwj8 dir dir-ltr"
+                        class="explore-filter-menu__list-padding cngiwj8 dir dir-ltr"
                       >
                         <label
                           for="intent-request-money-row-radio-button"
@@ -201,10 +201,10 @@
                                 value="REQUEST_MONEY"
                               />
                             </div>
-                            <div class="_gfomxi">
+                            <div class="explore-filter-menu__list-label">
                               <div
                                 id="intent-request-money-row-title"
-                                class="_gw4xx4"
+                                class="explore-filter-menu__list-title"
                               >
                                 Request money
                               </div>
