--- a/submission/GuestP.html
+++ b/submission/GuestP.html
@@ -1346,18 +1346,18 @@
                                 aria-disabled="false"
                                 role="group"
                                 aria-labelledby="default-private-row-title"
-                                class="rcem0st dir dir-ltr"
+                                class="explore-filter-menu__list-padding dir dir-ltr"
                               >
-                                <div class="_gfomxi">
+                                <div class="explore-filter-menu__list-label">
                                   <div
                                     id="default-private-row-title"
-                                    class="_gw4xx4"
+                                    class="explore-filter-menu__list-title"
                                   >
                                     Always require minimum price
                                   </div>
                                   <div
                                     id="default-private-row-subtitle"
-                                    class="_hi9sy"
+                                    class="explore-filter-menu__list-desc"
                                   >
                                     Private groups are set as your default. You
                                     can change this for specific instances.
@@ -1395,18 +1395,18 @@
                                 aria-disabled="false"
                                 role="group"
                                 aria-labelledby="caregiver-free-row-title"
-                                class="rcem0st dir dir-ltr"
+                                class="explore-filter-menu__list-padding dir dir-ltr"
                               >
-                                <div class="_gfomxi">
+                                <div class="explore-filter-menu__list-label">
                                   <div
                                     id="caregiver-free-row-title"
-                                    class="_gw4xx4"
+                                    class="explore-filter-menu__list-title"
                                   >
                                     Free admission for access providers
                                   </div>
                                   <div
                                     id="caregiver-free-row-subtitle"
-                                    class="_hi9sy"
+                                    class="explore-filter-menu__list-desc"
                                   >
                                     Invite interpreters, caregivers, or support
                                     professionals to join the guests they’re
