--- a/submission/about.html
+++ b/submission/about.html
@@ -1130,7 +1130,7 @@
                                 aria-disabled="false"
                                 role="group"
                                 aria-labelledby="profile_photo-row-title"
-                                class="rcem0st uyl8mnh dir dir-ltr"
+                                class="explore-filter-menu__list-padding uyl8mnh dir dir-ltr"
                               >
                                 <div class="flex">
                                   <div class="_7ytxmo">
@@ -1170,10 +1170,10 @@
                                       </div>
                                     </div>
                                   </div>
-                                  <div class="_gfomxi">
+                                  <div class="explore-filter-menu__list-label">
                                     <div
                                       id="profile_photo-row-title"
-                                      class="_gw4xx4"
+                                      class="explore-filter-menu__list-title"
                                     >
                                       Jose Angelo
                                     </div>
