--- a/submission/guestReq.html
+++ b/submission/guestReq.html
@@ -1142,28 +1142,28 @@
                                   aria-disabled="false"
                                   role="group"
                                   aria-labelledby="guest_requirements_infant_can_attend-row-title"
-                                  class="rcem0st u6fux4d dir dir-ltr"
+                                  class="explore-filter-menu__list-padding explore-filter-menu__list-padding--reset dir dir-ltr"
                                 >
                                   <label
                                     for="guest_requirements_infant_can_attend-row-checkbox"
                                     class="cursor-pointer"
                                     ><div class="flex">
-                                      <div class="_gfomxi">
+                                      <div class="explore-filter-menu__list-label">
                                         <div
                                           id="guest_requirements_infant_can_attend-row-title"
-                                          class="_gw4xx4"
+                                          class="explore-filter-menu__list-title"
                                         >
                                           Parents can bring kids under 2 years
                                         </div>
                                       </div>
                                       <div class="_1mqc21n">
-                                        <span class="_10ndlvp"
+                                        <span class="explore-filter-menu__list-content"
                                           ><input
                                             aria-labelledby="guest_requirements_infant_can_attend-row-title"
                                             id="guest_requirements_infant_can_attend-row-checkbox"
                                             class="form__check-input"
                                             type="checkbox" /><span
-                                            class="_41yoza"
+                                            class="explore-filter-menu__list-checkbox"
                                             data-checkbox="true"
                                           ></span
                                         ></span>
@@ -1187,16 +1187,16 @@
                                         aria-disabled="false"
                                         role="group"
                                         aria-labelledby="Tag:4804-row-title"
-                                        class="rcem0st uyl8mnh dir dir-ltr"
+                                        class="explore-filter-menu__list-padding uyl8mnh dir dir-ltr"
                                       >
                                         <label
                                           for="Tag:4804-row-checkbox"
                                           class="cursor-pointer"
                                           ><div class="flex">
-                                            <div class="_gfomxi">
+                                            <div class="explore-filter-menu__list-label">
                                               <div
                                                 id="Tag:4804-row-title"
-                                                class="_gw4xx4"
+                                                class="explore-filter-menu__list-title"
                                               >
                                                 Communication accessibility
                                                 features
@@ -1210,7 +1210,7 @@
                                               </div>
                                             </div>
                                             <div class="_1mqc21n">
-                                              <span class="_10ndlvp"
+                                              <span class="explore-filter-menu__list-content"
                                                 ><input
                                                   aria-labelledby="Tag:4804-row-title"
                                                   aria-describedby="Tag:4804-row-subtitle"
@@ -1218,7 +1218,7 @@
                                                   class="form__check-input"
                                                   aria-invalid="false"
                                                   type="checkbox" /><span
-                                                  class="_41yoza"
+                                                  class="explore-filter-menu__list-checkbox"
                                                   data-checkbox="true"
                                                 ></span
                                               ></span>
@@ -1232,16 +1232,16 @@
                                         aria-disabled="false"
                                         role="group"
                                         aria-labelledby="Tag:4802-row-title"
-                                        class="rcem0st uyl8mnh dir dir-ltr"
+                                        class="explore-filter-menu__list-padding uyl8mnh dir dir-ltr"
                                       >
                                         <label
                                           for="Tag:4802-row-checkbox"
                                           class="cursor-pointer"
                                           ><div class="flex">
-                                            <div class="_gfomxi">
+                                            <div class="explore-filter-menu__list-label">
                                               <div
                                                 id="Tag:4802-row-title"
-                                                class="_gw4xx4"
+                                                class="explore-filter-menu__list-title"
                                               >
                                                 Environmental accessibility
                                                 features
@@ -1257,7 +1257,7 @@
                                               </div>
                                             </div>
                                             <div class="_1mqc21n">
-                                              <span class="_10ndlvp"
+                                              <span class="explore-filter-menu__list-content"
                                                 ><input
                                                   aria-labelledby="Tag:4802-row-title"
                                                   aria-describedby="Tag:4802-row-subtitle"
@@ -1265,7 +1265,7 @@
                                                   class="form__check-input"
                                                   aria-invalid="false"
                                                   type="checkbox" /><span
-                                                  class="_41yoza"
+                                                  class="explore-filter-menu__list-checkbox"
                                                   data-checkbox="true"
                                                 ></span
                                               ></span>
@@ -1279,29 +1279,29 @@
                                         aria-disabled="false"
                                         role="group"
                                         aria-labelledby="Tag:4805-row-title"
-                                        class="rcem0st uyl8mnh dir dir-ltr"
+                                        class="explore-filter-menu__list-padding uyl8mnh dir dir-ltr"
                                       >
                                         <label
                                           for="Tag:4805-row-checkbox"
                                           class="cursor-pointer"
                                           ><div class="flex">
-                                            <div class="_gfomxi">
+                                            <div class="explore-filter-menu__list-label">
                                               <div
                                                 id="Tag:4805-row-title"
-                                                class="_gw4xx4"
+                                                class="explore-filter-menu__list-title"
                                               >
                                                 Other accessibility features
                                               </div>
                                             </div>
                                             <div class="_1mqc21n">
-                                              <span class="_10ndlvp"
+                                              <span class="explore-filter-menu__list-content"
                                                 ><input
                                                   aria-labelledby="Tag:4805-row-title"
                                                   id="Tag:4805-row-checkbox"
                                                   class="form__check-input"
                                                   aria-invalid="false"
                                                   type="checkbox" /><span
-                                                  class="_41yoza"
+                                                  class="explore-filter-menu__list-checkbox"
                                                   data-checkbox="true"
                                                 ></span
                                               ></span>
