--- a/submission/theme.html
+++ b/submission/theme.html
@@ -1076,15 +1076,15 @@
                                   aria-disabled="false"
                                   role="group"
                                   aria-labelledby="primary-theme-row-row-title"
-                                  class="rcem0st dir dir-ltr"
+                                  class="explore-filter-menu__list-padding dir dir-ltr"
                                 >
                                   <div class="flex">
-                                    <div class="_gfomxi">
+                                    <div class="explore-filter-menu__list-label">
                                       <button type="button" class="_u1thwpg">
                                         <span class="_rortwiu"
                                           ><div
                                             id="primary-theme-row-row-title"
-                                            class="_gw4xx4"
+                                            class="explore-filter-menu__list-title"
                                           >
                                             Beekeeping
                                           </div>
@@ -1112,7 +1112,7 @@
                                               </g></svg></span
                                         ></span>
                                       </button>
-                                      <div class="_hi9sy">Animals</div>
+                                      <div class="explore-filter-menu__list-desc">Animals</div>
                                     </div>
                                   </div>
                                 </div>
@@ -1309,15 +1309,15 @@
                         aria-disabled="false"
                         role="group"
                         aria-labelledby="Tag:510-row-row-title"
-                        class="rcem0st dir dir-ltr"
+                        class="explore-filter-menu__list-padding dir dir-ltr"
                       >
                         <div class="flex">
-                          <div class="_gfomxi">
+                          <div class="explore-filter-menu__list-label">
                             <button type="button" class="_u1thwpg">
                               <span class="_rortwiu"
                                 ><div
                                   id="Tag:510-row-row-title"
-                                  class="_gw4xx4"
+                                  class="explore-filter-menu__list-title"
                                 >
                                   Animals
                                 </div>
@@ -1355,15 +1355,15 @@
                         aria-disabled="false"
                         role="group"
                         aria-labelledby="Tag:1347-row-row-title"
-                        class="rcem0st dir dir-ltr"
+                        class="explore-filter-menu__list-padding dir dir-ltr"
                       >
                         <div class="flex">
-                          <div class="_gfomxi">
+                          <div class="explore-filter-menu__list-label">
                             <button type="button" class="_u1thwpg">
                               <span class="_rortwiu"
                                 ><div
                                   id="Tag:1347-row-row-title"
-                                  class="_gw4xx4"
+                                  class="explore-filter-menu__list-title"
                                 >
                                   Art and design
                                 </div>
@@ -1401,15 +1401,15 @@
                         aria-disabled="false"
                         role="group"
                         aria-labelledby="CustomView:202-row-row-title"
-                        class="rcem0st dir dir-ltr"
+                        class="explore-filter-menu__list-padding dir dir-ltr"
                       >
                         <div class="flex">
-                          <div class="_gfomxi">
+                          <div class="explore-filter-menu__list-label">
                             <button type="button" class="_u1thwpg">
                               <span class="_rortwiu"
                                 ><div
                                   id="CustomView:202-row-row-title"
-                                  class="_gw4xx4"
+                                  class="explore-filter-menu__list-title"
                                 >
                                   Culture, society, and science
                                 </div>
@@ -1447,15 +1447,15 @@
                         aria-disabled="false"
                         role="group"
                         aria-labelledby="Tag:1718-row-row-title"
-                        class="rcem0st dir dir-ltr"
+                        class="explore-filter-menu__list-padding dir dir-ltr"
                       >
                         <div class="flex">
-                          <div class="_gfomxi">
+                          <div class="explore-filter-menu__list-label">
                             <button type="button" class="_u1thwpg">
                               <span class="_rortwiu"
                                 ><div
                                   id="Tag:1718-row-row-title"
-                                  class="_gw4xx4"
+                                  class="explore-filter-menu__list-title"
                                 >
                                   Drink
                                 </div>
@@ -1493,15 +1493,15 @@
                         aria-disabled="false"
                         role="group"
                         aria-labelledby="Tag:455-row-row-title"
-                        class="rcem0st dir dir-ltr"
+                        class="explore-filter-menu__list-padding dir dir-ltr"
                       >
                         <div class="flex">
-                          <div class="_gfomxi">
+                          <div class="explore-filter-menu__list-label">
                             <button type="button" class="_u1thwpg">
                               <span class="_rortwiu"
                                 ><div
                                   id="Tag:455-row-row-title"
-                                  class="_gw4xx4"
+                                  class="explore-filter-menu__list-title"
                                 >
                                   Entertainment
                                 </div>
@@ -1539,15 +1539,15 @@
                         aria-disabled="false"
                         role="group"
                         aria-labelledby="Tag:1686-row-row-title"
-                        class="rcem0st dir dir-ltr"
+                        class="explore-filter-menu__list-padding dir dir-ltr"
                       >
                         <div class="flex">
-                          <div class="_gfomxi">
+                          <div class="explore-filter-menu__list-label">
                             <button type="button" class="_u1thwpg">
                               <span class="_rortwiu"
                                 ><div
                                   id="Tag:1686-row-row-title"
-                                  class="_gw4xx4"
+                                  class="explore-filter-menu__list-title"
                                 >
                                   Food
                                 </div>
@@ -1585,15 +1585,15 @@
                         aria-disabled="false"
                         role="group"
                         aria-labelledby="CustomView:201-row-row-title"
-                        class="rcem0st dir dir-ltr"
+                        class="explore-filter-menu__list-padding dir dir-ltr"
                       >
                         <div class="flex">
-                          <div class="_gfomxi">
+                          <div class="explore-filter-menu__list-label">
                             <button type="button" class="_u1thwpg">
                               <span class="_rortwiu"
                                 ><div
                                   id="CustomView:201-row-row-title"
-                                  class="_gw4xx4"
+                                  class="explore-filter-menu__list-title"
                                 >
                                   History and literature
                                 </div>
@@ -1631,15 +1631,15 @@
                         aria-disabled="false"
                         role="group"
                         aria-labelledby="Tag:2513-row-row-title"
-                        class="rcem0st dir dir-ltr"
+                        class="explore-filter-menu__list-padding dir dir-ltr"
                       >
                         <div class="flex">
-                          <div class="_gfomxi">
+                          <div class="explore-filter-menu__list-label">
                             <button type="button" class="_u1thwpg">
                               <span class="_rortwiu"
                                 ><div
                                   id="Tag:2513-row-row-title"
-                                  class="_gw4xx4"
+                                  class="explore-filter-menu__list-title"
                                 >
                                   Nature and outdoors
                                 </div>
@@ -1677,15 +1677,15 @@
                         aria-disabled="false"
                         role="group"
                         aria-labelledby="CustomView:203-row-row-title"
-                        class="rcem0st dir dir-ltr"
+                        class="explore-filter-menu__list-padding dir dir-ltr"
                       >
                         <div class="flex">
-                          <div class="_gfomxi">
+                          <div class="explore-filter-menu__list-label">
                             <button type="button" class="_u1thwpg">
                               <span class="_rortwiu"
                                 ><div
                                   id="CustomView:203-row-row-title"
-                                  class="_gw4xx4"
+                                  class="explore-filter-menu__list-title"
                                 >
                                   Sightseeing, shopping and transportation
                                 </div>
@@ -1723,15 +1723,15 @@
                         aria-disabled="false"
                         role="group"
                         aria-labelledby="Tag:459-row-row-title"
-                        class="rcem0st dir dir-ltr"
+                        class="explore-filter-menu__list-padding dir dir-ltr"
                       >
                         <div class="flex">
-                          <div class="_gfomxi">
+                          <div class="explore-filter-menu__list-label">
                             <button type="button" class="_u1thwpg">
                               <span class="_rortwiu"
                                 ><div
                                   id="Tag:459-row-row-title"
-                                  class="_gw4xx4"
+                                  class="explore-filter-menu__list-title"
                                 >
                                   Sports
                                 </div>
@@ -1769,15 +1769,15 @@
                         aria-disabled="false"
                         role="group"
                         aria-labelledby="Tag:2948-row-row-title"
-                        class="rcem0st dir dir-ltr"
+                        class="explore-filter-menu__list-padding dir dir-ltr"
                       >
                         <div class="flex">
-                          <div class="_gfomxi">
+                          <div class="explore-filter-menu__list-label">
                             <button type="button" class="_u1thwpg">
                               <span class="_rortwiu"
                                 ><div
                                   id="Tag:2948-row-row-title"
-                                  class="_gw4xx4"
+                                  class="explore-filter-menu__list-title"
                                 >
                                   Wellness
                                 </div>
