--- a/wishlists.html
+++ b/wishlists.html
@@ -235,7 +235,7 @@
                                           aria-disabled="false"
                                           role="group"
                                           aria-labelledby="1148602671-row-title"
-                                          class="rcem0st uyl8mnh dir dir-ltr"
+                                          class="explore-filter-menu__list-padding uyl8mnh dir dir-ltr"
                                         >
                                           <div class="flex">
                                             <div class="_7ytxmo">
@@ -275,10 +275,10 @@
                                                 </div>
                                               </div>
                                             </div>
-                                            <div class="_gfomxi">
+                                            <div class="explore-filter-menu__list-label">
                                               <div
                                                 id="1148602671-row-title"
-                                                class="_gw4xx4"
+                                                class="explore-filter-menu__list-title"
                                               >
                                                 <div class="_ytmuji">
                                                   1st Wishlist
@@ -306,7 +306,7 @@
                                           aria-disabled="false"
                                           role="group"
                                           aria-labelledby="1148604100-row-title"
-                                          class="rcem0st uyl8mnh dir dir-ltr"
+                                          class="explore-filter-menu__list-padding uyl8mnh dir dir-ltr"
                                         >
                                           <div class="flex">
                                             <div class="_7ytxmo">
@@ -346,10 +346,10 @@
                                                 </div>
                                               </div>
                                             </div>
-                                            <div class="_gfomxi">
+                                            <div class="explore-filter-menu__list-label">
                                               <div
                                                 id="1148604100-row-title"
-                                                class="_gw4xx4"
+                                                class="explore-filter-menu__list-title"
                                               >
                                                 <div class="_ytmuji">5th</div>
                                               </div>
@@ -367,7 +367,7 @@
                                           aria-disabled="false"
                                           role="group"
                                           aria-labelledby="1148603879-row-title"
-                                          class="rcem0st uyl8mnh dir dir-ltr"
+                                          class="explore-filter-menu__list-padding uyl8mnh dir dir-ltr"
                                         >
                                           <div class="flex">
                                             <div class="_7ytxmo">
@@ -407,10 +407,10 @@
                                                 </div>
                                               </div>
                                             </div>
-                                            <div class="_gfomxi">
+                                            <div class="explore-filter-menu__list-label">
                                               <div
                                                 id="1148603879-row-title"
-                                                class="_gw4xx4"
+                                                class="explore-filter-menu__list-title"
                                               >
                                                 <div class="_ytmuji">
                                                   Cooking
@@ -430,7 +430,7 @@
                                           aria-disabled="false"
                                           role="group"
                                           aria-labelledby="1148603784-row-title"
-                                          class="rcem0st uyl8mnh dir dir-ltr"
+                                          class="explore-filter-menu__list-padding uyl8mnh dir dir-ltr"
                                         >
                                           <div class="flex">
                                             <div class="_7ytxmo">
@@ -470,10 +470,10 @@
                                                 </div>
                                               </div>
                                             </div>
-                                            <div class="_gfomxi">
+                                            <div class="explore-filter-menu__list-label">
                                               <div
                                                 id="1148603784-row-title"
-                                                class="_gw4xx4"
+                                                class="explore-filter-menu__list-title"
                                               >
                                                 <div class="_ytmuji">
                                                   Concerts
@@ -493,7 +493,7 @@
                                           aria-disabled="false"
                                           role="group"
                                           aria-labelledby="1148603430-row-title"
-                                          class="rcem0st uyl8mnh dir dir-ltr"
+                                          class="explore-filter-menu__list-padding uyl8mnh dir dir-ltr"
                                         >
                                           <div class="flex">
                                             <div class="_7ytxmo">
@@ -533,10 +533,10 @@
                                                 </div>
                                               </div>
                                             </div>
-                                            <div class="_gfomxi">
+                                            <div class="explore-filter-menu__list-label">
                                               <div
                                                 id="1148603430-row-title"
-                                                class="_gw4xx4"
+                                                class="explore-filter-menu__list-title"
                                               >
                                                 <div class="_ytmuji">
                                                   Experiences
